--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ lib_deps =
 	bitbank2/JPEGDEC@^1.2.7
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	fhessel/esp32_https_server@^1.0.0
-build_flags =
-  -DHTTPS_LOGLEVEL=2
-  -DHTTPS_LOGTIMESTAMP
+	paulstoffregen/XPT2046_Touchscreen@0.0.0-alpha+sha.26b691b2c8
+build_flags = 
+	-DHTTPS_LOGLEVEL=2
+	-DHTTPS_LOGTIMESTAMP
