--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ lib_deps =
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	fhessel/esp32_https_server@^1.0.0
 	paulstoffregen/XPT2046_Touchscreen@0.0.0-alpha+sha.26b691b2c8
+	olikraus/U8g2@^2.34.4
 build_flags = 
 	-DHTTPS_LOGLEVEL=2
 	-DHTTPS_LOGTIMESTAMP
