--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,7 @@ lib_deps =
 	fhessel/esp32_https_server@^1.0.0
 	paulstoffregen/XPT2046_Touchscreen@0.0.0-alpha+sha.26b691b2c8
 	olikraus/U8g2@^2.34.4
+	greiman/SdFat@^2.2.0
 build_flags = 
 	-DHTTPS_LOGLEVEL=2
-	-DHTTPS_LOGTIMESTAMP
+	-DHTTPS_DISABLE_SELFSIGNING
