--- a/svelte/package.json
+++ b/svelte/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@ffmpeg/core": "^0.11.0",
     "@ffmpeg/ffmpeg": "^0.11.6",
+    "browserify": "^17.0.0",
+    "mp4-mjpeg": "^0.0.2",
     "sirv-cli": "^2.0.0"
   }
 }
