--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+upload_speed = 115200
 lib_deps = 
 	bodmer/TFT_eSPI@^2.4.71
 	me-no-dev/AsyncTCP@^1.1.1
