--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,6 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-upload_speed = 115200
 lib_deps = 
 	bodmer/TFT_eSPI@^2.4.71
 	me-no-dev/AsyncTCP@^1.1.1
@@ -26,6 +25,7 @@ lib_deps =
 	paulstoffregen/XPT2046_Touchscreen@0.0.0-alpha+sha.26b691b2c8
 	olikraus/U8g2@^2.34.4
 	greiman/SdFat@^2.2.0
+	bblanchon/ArduinoJson@5.13.4
 build_flags = 
 	-DHTTPS_LOGLEVEL=2
 	-DHTTPS_DISABLE_SELFSIGNING
